[tool.poetry]
name = "qmsspkg_kd2810"
version = "0.1.0"
description = "test"
authors = ["Kevin Davis"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.9"
pandas = "^1.3.4"

[tool.poetry.dev-dependencies]
myst-nb = "^0.13.1"
sphinx-autoapi = "^1.8.4"
sphinx-rtd-theme = "^1.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
